--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>Juwan SWE Portfolio</title>
 
     <!-- icons -->
     <link
